cmake_minimum_required(VERSION 3.22)
project(BOJ_PS)

set(CMAKE_CXX_STANDARD 14)

add_executable(BOJ_PS
        BOJ_1003.cpp
        BOJ_1010.cpp
        BOJ_1012.cpp
        BOJ_10171.cpp
        BOJ_10172.cpp
        BOJ_1018.cpp
        BOJ_1021.cpp
        BOJ_10250.cpp
        BOJ_1026.cpp
        BOJ_10422.cpp
        BOJ_10448.cpp
        BOJ_10610.cpp
        BOJ_1074.cpp
        BOJ_1076.cpp
        BOJ_10773.cpp
        BOJ_10797.cpp
        BOJ_10798.cpp
        BOJ_10799.cpp
        BOJ_10808.cpp
        BOJ_10809.cpp
        BOJ_10811.cpp
        BOJ_10813.cpp
        BOJ_10814.cpp
        BOJ_10815.cpp
        BOJ_10816.cpp
        BOJ_10819.cpp
        BOJ_10820.cpp
        BOJ_10825.cpp
        BOJ_10828.cpp
        BOJ_10829.cpp
        BOJ_10830.cpp
        BOJ_10844.cpp
        BOJ_10845.cpp
        BOJ_1085.cpp
        BOJ_10866.cpp
        BOJ_10867.cpp
        BOJ_10870.cpp
        BOJ_10872.cpp
        BOJ_1094.cpp
        BOJ_10942.cpp
        BOJ_10971.cpp
        BOJ_10972.cpp
        BOJ_10973.cpp
        BOJ_10974.cpp
        BOJ_10988.cpp
        BOJ_10989.cpp
        BOJ_11003.cpp
        BOJ_11047.cpp
        BOJ_11048.cpp
        BOJ_11049.cpp
        BOJ_11050.cpp
        BOJ_11051.cpp
        BOJ_11052.cpp
        BOJ_11053.cpp
        BOJ_11054.cpp
        BOJ_11055.cpp
        BOJ_11057.cpp
        BOJ_1106.cpp
        BOJ_11060.cpp
        BOJ_11066.cpp
        BOJ_1107.cpp
        BOJ_11134.cpp
        BOJ_11279.cpp
        BOJ_11286.cpp
        BOJ_11399.cpp
        BOJ_1149.cpp
        BOJ_1152.cpp
        BOJ_1157.cpp
        BOJ_11575.cpp
        BOJ_1158.cpp
        BOJ_11650.cpp
        BOJ_11651.cpp
        BOJ_11652.cpp
        BOJ_11653.cpp
        BOJ_11654.cpp
        BOJ_11655.cpp
        BOJ_11656.cpp
        BOJ_11659.cpp
        BOJ_11660.cpp
        BOJ_11721.cpp
        BOJ_11722.cpp
        BOJ_11723.cpp
        BOJ_11724.cpp
        BOJ_11726.cpp
        BOJ_11727.cpp
        BOJ_11728.cpp
        BOJ_11729.cpp
        BOJ_1181.cpp
        BOJ_1182.cpp
        BOJ_11866.cpp
        BOJ_11931.cpp
        BOJ_11966.cpp
        BOJ_12015.cpp
        BOJ_1212.cpp
        BOJ_1259.cpp
        BOJ_1260.cpp
        BOJ_1261.cpp
        BOJ_12789.cpp
        BOJ_12852.cpp
        BOJ_12865.cpp
        "BOJ_12920(US).cpp"
        BOJ_1302.cpp
        BOJ_13023.cpp
        BOJ_1309.cpp
        BOJ_1316.cpp
        BOJ_13301.cpp
        BOJ_1339.cpp
        BOJ_13398.cpp
        BOJ_1357.cpp
        BOJ_13699.cpp
        BOJ_13752.cpp
        BOJ_13900.cpp
        BOJ_13913.cpp
        BOJ_14002.cpp
        BOJ_14225.cpp
        BOJ_14226.cpp
        BOJ_1427.cpp
        BOJ_1431.cpp
        BOJ_1436.cpp
        BOJ_14391.cpp
        BOJ_1448.cpp
        BOJ_1449.cpp
        BOJ_14494.cpp
        BOJ_14501.cpp
        BOJ_1463.cpp
        BOJ_14723.cpp
        BOJ_1475.cpp
        BOJ_1476.cpp
        BOJ_14889.cpp
        BOJ_14916.cpp
        BOJ_1495.cpp
        BOJ_1520.cpp
        BOJ_1535.cpp
        BOJ_1550.cpp
        BOJ_15596.cpp
        BOJ_15649.cpp
        BOJ_15650.cpp
        BOJ_15651.cpp
        BOJ_15652.cpp
        BOJ_15654.cpp
        BOJ_15661.cpp
        BOJ_15688.cpp
        BOJ_15712.cpp
        BOJ_15784.cpp
        BOJ_15821.cpp
        BOJ_15829.cpp
        BOJ_15988.cpp
        BOJ_15990.cpp
        BOJ_1605.cpp
        BOJ_16194.cpp
        BOJ_1620.cpp
        BOJ_16212.cpp
        BOJ_1629.cpp
        BOJ_16395.cpp
        BOJ_1654.cpp
        BOJ_16953.cpp
        BOJ_1697.cpp
        BOJ_1699.cpp
        BOJ_1707.cpp
        BOJ_17298.cpp
        BOJ_1748.cpp
        BOJ_1753.cpp
        BOJ_1759.cpp
        BOJ_17609.cpp
        BOJ_17626.cpp
        BOJ_1764.cpp
        BOJ_18258.cpp
        BOJ_1826.cpp
        BOJ_18290.cpp
        BOJ_18353.cpp
        BOJ_1874.cpp
        BOJ_18870.cpp
        BOJ_1890.cpp
        BOJ_1904.cpp
        BOJ_1912.cpp
        BOJ_1920.cpp
        BOJ_1927.cpp
        BOJ_1929.cpp
        BOJ_1931.cpp
        BOJ_1932.cpp
        BOJ_1934.cpp
        BOJ_19637.cpp
        BOJ_1965.cpp
        BOJ_1966.cpp
        BOJ_1978.cpp
        BOJ_1991.cpp
        BOJ_2003.cpp
        BOJ_20125.cpp
        BOJ_2018.cpp
        BOJ_20291.cpp
        BOJ_20540.cpp
        BOJ_20542.cpp
        BOJ_20551.cpp
        BOJ_2096.cpp
        BOJ_2108.cpp
        BOJ_2110.cpp
        BOJ_21312.cpp
        BOJ_2133.cpp
        BOJ_2156.cpp
        BOJ_2161.cpp
        BOJ_2164.cpp
        BOJ_2178.cpp
        BOJ_2193.cpp
        BOJ_2217.cpp
        BOJ_2225.cpp
        BOJ_2230.cpp
        BOJ_2231.cpp
        BOJ_2292.cpp
        BOJ_2293.cpp
        BOJ_2294.cpp
        BOJ_23058.cpp
        BOJ_2309.cpp
        BOJ_2355.cpp
        BOJ_2417.cpp
        BOJ_2440.cpp
        BOJ_2443.cpp
        BOJ_2447.cpp
        BOJ_2455.cpp
        BOJ_2470.cpp
        BOJ_2475.cpp
        BOJ_2491.cpp
        BOJ_2523.cpp
        BOJ_2529.cpp
        BOJ_2565.cpp
        BOJ_2579.cpp
        BOJ_2580.cpp
        BOJ_2606.cpp
        BOJ_2609.cpp
        BOJ_2630.cpp
        BOJ_2667.cpp
        BOJ_2675.cpp
        BOJ_2748.cpp
        BOJ_2750.cpp
        BOJ_2751.cpp
        BOJ_2775.cpp
        BOJ_2776.cpp
        BOJ_2798.cpp
        BOJ_2805.cpp
        BOJ_2839.cpp
        BOJ_2869.cpp
        BOJ_2876.cpp
        BOJ_2908.cpp
        BOJ_2920.cpp
        BOJ_2941.cpp
        BOJ_2947.cpp
        BOJ_3036.cpp
        BOJ_3085.cpp
        BOJ_3273.cpp
        BOJ_3778.cpp
        BOJ_3986.cpp
        BOJ_4153.cpp
        BOJ_4344.cpp
        BOJ_4673.cpp
        BOJ_4796.cpp
        BOJ_4948.cpp
        BOJ_4949.cpp
        BOJ_5430.cpp
        BOJ_5585.cpp
        BOJ_5622.cpp
        BOJ_5635.cpp
        BOJ_6064.cpp
        BOJ_6603.cpp
        BOJ_7562.cpp
        BOJ_7568.cpp
        BOJ_7576.cpp
        BOJ_7579.cpp
        BOJ_7785.cpp
        BOJ_8958.cpp
        BOJ_9012.cpp
        BOJ_9084.cpp
        BOJ_9095.cpp
        BOJ_9184.cpp
        BOJ_9251.cpp
        BOJ_9252.cpp
        BOJ_9461.cpp
        BOJ_9465.cpp
        BOJ_9625.cpp
        BOJ_9655.cpp
        BOJ_9656.cpp
        BOJ_9663.cpp)
